RG-810 Minor tag input fixes: add placeholder support for tags input, fix bottom spacing
Former-commit-id: d0811bd84239c6c6f2b95dca428092976e3d99a4

--- a/components/tags-input/tags-input.scss
+++ b/components/tags-input/tags-input.scss
@@ -6,7 +6,7 @@ $tags-input-padding: $ring-unit / 2;
   background-color: #FFF;
   border: 1px solid $ring-gray-color;
   overflow: hidden;
-  padding: $tags-input-padding $tags-input-padding 0 $tags-input-padding;
+  padding: $tags-input-padding $tags-input-padding 2px $tags-input-padding;
 
   & .ring-input {
     border: none;
